sock-shop/base/ingress-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sock-shop-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - sock-shop.gridlan.com
    secretName: gridlan-com
  rules:
  - host: sock-shop.gridlan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: front-end-svc
          servicePort: 80
